testcases/error/too_much_enum_variant.veryl
module too_much_enum_variant {
    enum EnumA: logic<1> {
        X,
        Y,
        Z,
    }
}
